--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,11 @@ framework = arduino
 platform_packages = platformio/framework-arduinoespressif32@3.20004.0
 upload_speed = 1500000
 monitor_speed = 115200
-board_build.partitions = default_16MB.csv
+board_build.partitions = large_spiffs_16MB.csv
 build_flags =
 	-DCORE_DEBUG_LEVEL=5
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 lib_deps =
-    m5stack/M5EPD
+    https://github.com/m5stack/M5EPD.git#0.1.5
 	https://github.com/schreibfaul1/ESP32-audioI2S#2.0.6
