--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,5 @@ build_flags =
 lib_deps =
     https://github.com/m5stack/M5EPD.git#0.1.5
 	https://github.com/schreibfaul1/ESP32-audioI2S#2.0.6
+
+monitor_filters = esp32_exception_decoder
